--- a/sass/P1barranav.scss
+++ b/sass/P1barranav.scss
@@ -10,28 +10,36 @@ body {
 .barranav {
   background-color: #ffffff;
   width: 100%;
-  height: 10em;
+  height: 8em;
   display: grid;
   grid-template-columns: repeat(2, auto);
 
-  .barranav__logo {
+  &__logo {
     width: 100%;
-    height: 10em;
+    height: 8em;
     display: flex;
     align-items: center;
     justify-content: center;
+  }
+  &__boxlogo {
+    width: 70%;
+    height: 5em;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 
     img {
-        width: 50%;
-        height: 5em;
-      }
+      width: 80%;
+      height: 5em;
+      cursor: pointer;
+    }
   }
-  
+
   &__menu {
     margin: 0;
     padding: 0;
     width: 100%;
-    height: 10em;
+    height: 8em;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -44,12 +52,11 @@ body {
       text-decoration: none;
       font-weight: bold;
       transition: color 400ms, font-size 400ms;
-      
+
       &:hover {
-          color: rgb(120, 251, 26);
-          transition: color 400ms;
-        }
+        color: rgb(120, 251, 26);
+        transition: color 400ms;
+      }
     }
   }
- 
 }
