--- a/sass/P1mainbox1.scss
+++ b/sass/P1mainbox1.scss
@@ -10,10 +10,22 @@
     background-attachment: fixed;
 
     &__info {
+        color: rgb(0, 0, 0);
         display: flex;
         flex-direction: column;
-        align-items: center;
-        justify-content: flex-end;
+        justify-content: center;
         list-style: none;
+
+        h1{
+            font-size: 2.5em;
+            align-items: center;
+            text-align: center;
+            padding-top: 2em;
+        }
+        h2{
+            font-size: 1.5em;
+            align-items: center;
+            text-align: center;
+        }
     }
 }
