--- a/sass/P1categoria.scss
+++ b/sass/P1categoria.scss
@@ -3,9 +3,9 @@
     grid-template-columns: repeat(5, 4fr);
     gap: 40px;
     position: relative;
-    padding: 2em;
-    padding-left: 15em;
-    padding-right: 15em;
+    padding: 2em 15em 8em 15em;
+    // padding-left: 15em;
+    // padding-right: 15em;
     
 }
 
