--- a/sass/generales.scss
+++ b/sass/generales.scss
@@ -1,13 +1,39 @@
-.contenedor{
-    background-color: rgb(57, 57, 57) ;
-    width: 100%;
-    height: auto;
-    
-    h2{
-     color: rgb(3, 3, 3);
-     font-size: 40px;
-     text-align: center;
-     margin: 0;
-     padding: 1em;
-    }
+/* Estilos Generales */
+body {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  margin: 0em;
+  padding: 0em;
+  background-color: rgb(222, 235, 221);
+}
+
+.contenedor {
+  background-color: rgb(57, 57, 57);
+  width: 100%;
+  height: auto;
+
+  h2 {
+    color: rgb(3, 3, 3);
+    font-size: 40px;
+    text-align: center;
+    margin: 0;
+    padding: 1em;
+  }
+}
+
+.footer__final {
+  width: 100%;
+  height: 8em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+//   background-color: rgb(255, 254, 254);
+
+  p {
+    margin: 0;
+    font-size: 20px;
+    font-weight: bold;
+    // align-items: center;
+    // text-align: center;
+  }
 }
