--- a/sass/P1categoria.scss
+++ b/sass/P1categoria.scss
@@ -1,12 +1,9 @@
 .categorias {
     display: grid;
     grid-template-columns: repeat(5, 4fr);
-    gap: 40px;
+    gap: 30px;
     position: relative;
-    padding: 2em 15em 8em 15em;
-    // padding-left: 15em;
-    // padding-right: 15em;
-
+    padding: 2em 13em 10em 13em;
     
 }
 
@@ -17,6 +14,11 @@
     align-items: center;
     text-align: center;
     position: relative;
+    transition: transform 0.4s;
+    border-color: rgba(33, 123, 60, 0.581);
+    border-width: .1em;
+    border-style: solid;
+    border-radius: 5%;
 
 
     &::after {
@@ -35,8 +37,9 @@
     }
 
     &:hover {
+        transform: scale(1.08);
         &::after {
-            opacity: 0.5;
+            opacity: 0.5;            
         }
     }
 
@@ -44,10 +47,9 @@
         border-radius: 5%;
         width: 100%;
         height: 100%;
-        vertical-align: top;
-        position: relative;
+        // vertical-align: top;
+        // position: relative;
         background-color: white;
-    
     }
    
     &__datos {
@@ -58,9 +60,8 @@
     }
 
     &__nombre {
-        font-family: 'Playfair Display', serif;
         color: white;
-        font-size: 25px;
+        font-size: 20px;
         margin-bottom: 5px;
         text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     }
