--- a/sass/P1mainbox1.scss
+++ b/sass/P1mainbox1.scss
@@ -2,30 +2,48 @@
 .caja-fondo1 {
     margin: 0;
     width: 100%;
-    height: 30em;
+    height: 35em;
     background-image: url('../img/img1investigacion.jpeg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
-
+    display: grid;
+    justify-content: center;
+    
+    
+    &::before{
+        content: '';
+        display: block;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 10%, rgb(0, 0, 0) 80%);
+        position: absolute;
+        // top: 0;
+        // left: 0;
+        z-index: 0;
+        // border-radius: 5%;
+        transition: 0.3s ease-out all;
+        opacity: 1;
+    } 
     &__info {
-        color: rgb(0, 0, 0);
+        color: rgb(255, 255, 255);
+        position: relative;
         display: flex;
         flex-direction: column;
         justify-content: center;
         list-style: none;
-
+        
         h1{
-            font-size: 2.5em;
-            align-items: center;
-            text-align: center;
-            padding-top: 2em;
-        }
-        h2{
-            font-size: 1.5em;
+            font-size: 2.8em;
             align-items: center;
             text-align: center;
         }
-    }
+        p{
+            font-size: 1.2em;
+            align-items: center;
+            text-align: center;
+            font-style: italic;
+        }
+    }  
 }
