--- a/sass/P2docentes_info.scss
+++ b/sass/P2docentes_info.scss
@@ -6,7 +6,7 @@
 	}
 
 	&__overlay {
-		background: rgba(92, 136, 80, 0.785);
+		background: rgba(48, 97, 33, 0.971);
 		position: fixed;
 		top: 0;
 		left: 0;
@@ -17,38 +17,39 @@
 	}
 
 	&__contenedor {
+		// background-color: #fff;
 		width: 90%;
 		max-width: 1050px;
 		margin: auto;
 		padding: 40px 0;
-		display: grid;
+		// display: grid;
 		height: 100vh;
-		grid-template-rows: auto 1fr auto;
+		// grid-template-rows: auto 1fr auto;
 		gap: 20px;
 		position: relative;
 	}
 
 	&__contenedor-titulo {
-		background-color: #fff;
+		background-color: #fff;;
 		display: flex;
 		justify-content: space-between;
-		align-items: flex-end;
+		align-items: center;
 	}
 
-	&__titulo {
-		font-family: 'Playfair Display',serif;
+	&__nombre {
 		font-size: 24px;
-		font-weight: normal;
+		font-weight: bold;
 		color: #000000;
 	}
 
 	&__btn {
 		background: none;
 		border: none;
-		color: #fff;
-		width: 40px;
-		height: 40px;
+		color: #000000;
+		width: 4em;
+		height: 4em;
 		cursor: pointer;
+		justify-content: end;
 
 		&--anterior {
 			position: absolute;
@@ -68,18 +69,32 @@
 		width: 100%;
 	}
 
+	&__contenedor-biografia{
+		background-color: #9ad089;
+		width: auto;
+		height: auto;
+		display: flex;
+		align-items: center;
+	}
+
 	&__contenedor-imagen-activa {
+		width: 15em;
+		height: 15em;
 		display: flex;
 		justify-content: center;
 		overflow: hidden;
 	}
 
-	&__descripcion-imagen-activa {
-		font-size: 16px;
-		line-height: 24px;
-		margin-bottom: 10px;
-		color: #fff;
+	&__contenedor-docente{
+		color: rgb(0, 0, 0);
+		font-weight: bold;
+		justify-content: center;
+		display: flex;
+		flex-direction: column;
+	}
+	&__par-evaluador{
+		color: rgb(0, 0, 0);
+		font-weight: bold;
 	}
 
-	
 }
