--- a/sass/generales.scss
+++ b/sass/generales.scss
@@ -7,33 +7,31 @@ body {
 }
 
 .contenedor {
-  background-color: rgb(57, 57, 57);
+  background-color: rgb(0, 0, 0);
   width: 100%;
   height: auto;
 
-  h2 {
-    color: rgb(3, 3, 3);
-    font-size: 40px;
+  h3 {
+    color: rgb(255, 255, 255);
+    font-size: 35px;
     text-align: center;
-    margin: 0;
-    padding: 1em;
+    // margin: 0;
+    padding: 3em;
   }
 }
 
 .footer__final {
+  background-color: rgb(210, 210, 210);
   width: 100%;
   height: 8em;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-//   background-color: rgb(255, 254, 254);
 
   p {
     margin: 0;
     font-size: 20px;
     font-weight: bold;
-    // align-items: center;
-    // text-align: center;
   }
 }
