Arreglos en diseños P1
Cambio en la caja de presentación docentes y el botón (con animación)

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,5 +1,6 @@
 @use 'P1barranav';
-@use 'P1categoria';
 @use 'P1mainbox1';
-@use 'generales';
+@use 'P1categoria';
 @use 'P2docentes_info';
+@use 'generales';
+@use 'keyframes';
