--- a/sass/P2docentes_info.scss
+++ b/sass/P2docentes_info.scss
@@ -1,101 +1,100 @@
 .galeria {
-	display: none;
+  display: none;
 
-	&--active {
-		display: block;
-	}
+  &--active {
+    display: block;
+  }
 
-	&__overlay {
-		background: rgba(48, 97, 33, 0.971);
-		position: fixed;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100vh;
-		z-index: 100;
-		overflow: auto;
-	}
+  &__overlay {
+    background: rgba(48, 97, 33, 0.971);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 100;
+    overflow: auto;
+  }
 
-	&__contenedor {
-		// background-color: #fff;
-		width: 90%;
-		max-width: 1050px;
-		margin: auto;
-		padding: 40px 0;
-		// display: grid;
-		height: 100vh;
-		// grid-template-rows: auto 1fr auto;
-		gap: 20px;
-		position: relative;
-	}
+  &__contenedor {
+    // background-color: #fff;
+    width: 90%;
+    max-width: 1050px;
+    margin: auto;
+    padding: 40px 0;
+    // display: grid;
+    height: 100vh;
+    // grid-template-rows: auto 1fr auto;
+    gap: 20px;
+    position: relative;
+    border-radius: 10%;
+  }
 
-	&__contenedor-titulo {
-		background-color: #fff;;
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-	}
+  &__contenedor-titulo {
+    background-color: #787777;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 1em;
+    margin-bottom: 1em;
+  }
 
-	&__nombre {
-		font-size: 24px;
-		font-weight: bold;
-		color: #000000;
-	}
+  &__nombre {
+    font-size: 24px;
+    font-weight: bold;
+    color: #000000;
+    padding-left: 2em;
+  }
 
-	&__btn {
-		background: none;
-		border: none;
-		color: #000000;
-		width: 4em;
-		height: 4em;
-		cursor: pointer;
-		justify-content: end;
+  &__btn {
+    background: none;
+    border: none;
+    color: #000000;
+    width: 5em;
+    height: 5em;
+    cursor: pointer;
+    justify-content: end;
+  }
 
-		&--anterior {
-			position: absolute;
-			left: -5%;
-			top: calc(50% - 20px);
-		}
+  &__icono-boton {
+    height: 80%;
+    width: 80%;
+    transform-origin: center; // Asegura que la animación ocurra desde el centro
+    transition: transform 2s ease-in-out; // Efecto suave al entrar y salir
 
-		&--siguiente {
-			position: absolute;
-			right: -5%;
-			top: calc(50% - 20px);
-		}
-	}
+    // Cuando el usuario pase el cursor sobre el botón
+    &:hover {
+      animation: respirar 1.3s ease-in-out infinite; // Inicia la animación al hacer hover
+    }
+  }
 
-	&__icono-boton {
-		height: 100%;
-		width: 100%;
-	}
+  &__contenedor-biografia {
+    background-color: #919d8d;
+    width: auto;
+    height: auto;
+    display: flex;
+    align-items: center;
+    border-radius: 1em;
+  }
 
-	&__contenedor-biografia{
-		background-color: #9ad089;
-		width: auto;
-		height: auto;
-		display: flex;
-		align-items: center;
-	}
+  &__contenedor-imagen-activa {
+    width: 15em;
+    height: 15em;
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
+    background-color: white;
+  }
 
-	&__contenedor-imagen-activa {
-		width: 15em;
-		height: 15em;
-		display: flex;
-		justify-content: center;
-		overflow: hidden;
-		background-color: white;
-	}
-
-	&__contenedor-docente{
-		color: rgb(0, 0, 0);
-		font-weight: bold;
-		justify-content: center;
-		display: flex;
-		flex-direction: column;
-	}
-	&__par-evaluador{
-		color: rgb(0, 0, 0);
-		font-weight: bold;
-	}
-
+  &__contenedor-docente {
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+  }
+  &__par-evaluador {
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+  }
 }
