--- a/sass/keyframes.scss
+++ b/sass/keyframes.scss
@@ -1,13 +1,30 @@
 // Definir la animación del botón del archivo "P2docentes_info.scss", en el apartado "&__icono-boton{}"
 @keyframes respirar {
-    0% {
-      transform: scale(1); //el botón empieza en su tamaño original
-    }
-    50% {
-      transform: scale(1.2); // Aumenta un 50%
-    }
-    100% {
-      transform: scale(1); //el botón se devuelve a su tamaño original
-    }
+  0% {
+    transform: scale(1); //el botón empieza en su tamaño original
   }
-  
+
+  50% {
+    transform: scale(1.2); // Aumenta un 50%
+  }
+
+  100% {
+    transform: scale(1); //el botón se devuelve a su tamaño original
+  }
+}
+
+@keyframes animate {
+
+  0% {
+    transform: translateY(0) rotate(0deg);
+    opacity: 1;
+    border-radius: 0;
+  }
+
+  100% {
+    transform: translateY(-1000px) rotate(720deg);
+    opacity: 0;
+    border-radius: 50%;
+  }
+
+}
