--- a/sass/generales.scss
+++ b/sass/generales.scss
@@ -15,8 +15,9 @@ body {
     color: rgb(255, 255, 255);
     font-size: 35px;
     text-align: center;
-    // margin: 0;
+    margin: 0;
     padding: 4em;
+    position: relative;
   }
 }
 
