--- a/sass/P2docentes_info.scss
+++ b/sass/P2docentes_info.scss
@@ -13,10 +13,11 @@
     height: 100%;
     z-index: 100;
     overflow: hidden;
-    background: #65bb58f2;
+    // background: #65bb58f2; NO BORRAR
+    background: #bba558f2;
     display: flex;
     overflow-x: hidden; //ahorita se cambia
-	overflow-y: scroll;
+    overflow-y: scroll;
   }
   &__area-diseño {
     position: fixed;
@@ -33,7 +34,7 @@
     list-style: none;
     width: 20px;
     height: 20px;
-    background: rgba(7, 232, 157, 0.537);
+    background: rgba(255, 255, 255, 0.685);
     animation: animate 25s linear infinite;
     bottom: -150px;
   }
@@ -124,11 +125,11 @@
   }
 
   &__contenedor-titulo {
-    background-color: #787777;
+    background-color: #ffffffb1;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-radius: 1em;
+    border-radius: 2em;
     margin-bottom: 1em;
   }
 
@@ -166,8 +167,8 @@
     width: auto;
     height: auto;
     display: flex;
-	align-items: center;
-	justify-content: center;
+    align-items: center;
+    justify-content: center;
     // flex-direction: column;
     border-radius: 2em;
     padding: 1em;
@@ -180,21 +181,21 @@
     border-radius: 3%;
     border-color: #000000;
     border-style: solid;
-	border-width: .1em;
+    border-width: 0.1em;
     margin: 2em;
   }
   &__imagen {
     width: 100%;
     height: 100%;
-	background-size: cover;
-	background-color: aliceblue;
+    background-size: cover;
+    background-color: aliceblue;
   }
   &__contenedor-docente1 {
-	padding-left: 3em;
+    padding-left: 3em;
     width: auto;
     height: auto;
     display: flex;
-	flex-direction: column;
+    flex-direction: column;
     justify-content: center;
   }
 
@@ -206,8 +207,8 @@
     width: auto;
     height: auto;
     display: flex;
-    border-radius: 1em;
-	margin-top: 1em;
-	padding: 2em;
+    border-radius: 2em;
+    margin-top: 1em;
+    padding: 2em;
   }
 }
