--- a/sass/P1categoria.scss
+++ b/sass/P1categoria.scss
@@ -1,11 +1,13 @@
+
 .categorias {
     display: grid;
     grid-template-columns: repeat(5, 4fr);
     gap: 30px;
     position: relative;
     padding: 2em 13em 10em 13em;
-    
+
 }
+
 
 .categoria {
     display: flex;
@@ -15,7 +17,7 @@
     text-align: center;
     position: relative;
     transition: transform 0.4s;
-    border-color: rgba(33, 123, 60, 0.581);
+    border-color:#bba558f2;;
     border-width: .1em;
     border-style: solid;
     border-radius: 5%;
@@ -38,12 +40,13 @@
 
     &:hover {
         transform: scale(1.08);
+
         &::after {
-            opacity: 0.5;            
+            opacity: 0.5;
         }
     }
 
-    &__img  {
+    &__img {
         border-radius: 5%;
         width: 100%;
         height: 100%;
@@ -51,7 +54,7 @@
         // position: relative;
         background-color: white;
     }
-   
+
     &__datos {
         position: absolute;
         bottom: 0;
@@ -64,5 +67,20 @@
         font-size: 20px;
         margin-bottom: 5px;
         text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    }
+}
+
+.contenedor {
+    background-color: rgb(0, 0, 0);
+    width: 100%;
+    height: auto;
+
+    h3 {
+        color: rgb(255, 255, 255);
+        font-size: 35px;
+        text-align: center;
+        margin: 0;
+        padding: 4em;
+        position: relative;
     }
 }
