--- a/sass/P3estadisticas.scss
+++ b/sass/P3estadisticas.scss
@@ -1,7 +1,7 @@
 .dashb{
     width: 100%;
     height: auto;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(79, 123, 127);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -10,7 +10,7 @@
         width: 80%;
         height: 40em;
         padding: 4em;
-        background-color: rgba(141, 255, 139, 0.603);
+        background-color: #bba558f2;
     }    
     &__frame{
         width: 100%;
