--- a/sass/generales.scss
+++ b/sass/generales.scss
@@ -1,24 +1,9 @@
 /* Estilos Generales */
 body {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Poppins', sans-serif;
   margin: 0em;
   padding: 0em;
   background-color: rgb(222, 235, 221);
-}
-
-.contenedor {
-  background-color: rgb(0, 0, 0);
-  width: 100%;
-  height: auto;
-
-  h3 {
-    color: rgb(255, 255, 255);
-    font-size: 35px;
-    text-align: center;
-    margin: 0;
-    padding: 4em;
-    position: relative;
-  }
 }
 
 .footer__final {
@@ -30,9 +15,16 @@ body {
   align-items: center;
   justify-content: center;
 
-  p {
-    margin: 0;
-    font-size: 20px;
+  h2 {
+    font-size: 17px;
     font-weight: bold;
   }
+
+  p {
+    margin: 0;
+    font-size: 15px;
+    font-weight: bold;
+  }
+
+
 }
