Cambios de estilos y estadisticas
Cambio del hover por un cafe tenue, actualización de la 4a estadística y adicion de la fuente poppins en los otros 2 archivos html.

--- a/sass/P1barranav.scss
+++ b/sass/P1barranav.scss
@@ -47,7 +47,7 @@
       transition: color 400ms, font-size 400ms;
 
       &:hover {
-        color: rgb(120, 251, 26);
+        color: #bba558f2;
         transition: color 400ms;
       }
     }
